src/test/deca/context/valid/created/decl-int-var-noinit.deca
//Description :
// Declaration d'une variable entière sans initialisation
//
// Resultats :
// 


{
    int x;
}
