src/test/deca/context/invalid/created/double-affect-same.deca
//Description :
// Test d'une double initialisation de même type
//
// Resultats :
// Erreur

{
    int x = 1;
    int x = 2;
}
